fix: moving collapsed group with active tab (closes [#516]
workaround bug 2007061

--- a/addon/chrome/content/overlay/multirow.css
+++ b/addon/chrome/content/overlay/multirow.css
@@ -309,6 +309,20 @@
       border-end-start-radius: 0;
     }
   }
+
+  /* Bug 2007061 - Dragging a group that contains a Split View will not hide
+     the Split View if the Split View is selected
+  */
+
+  /* stylelint-disable-next-line no-descending-specificity */
+  tab-group[movingtabgroup] & {
+    min-width: 0 !important;
+    max-width: 0 !important;
+    max-height: 0 !important;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
+  }
 }
 
 #tabbrowser-tabs[tabmix-multibar][orient="horizontal"] {
